rewrite tests to JUnit 6.0 and Testcontainers 2.0