@@ -3,88 +3,84 @@ package io.vertx.tests.redis.client;
 import io.vertx.core.Context;
 import io.vertx.core.Vertx;
 import io.vertx.core.internal.ContextInternal;
-import io.vertx.ext.unit.Async;
-import io.vertx.ext.unit.TestContext;
+import io.vertx.junit5.Checkpoint;
+import io.vertx.junit5.VertxTestContext;
 import io.vertx.redis.client.Command;
 import io.vertx.redis.client.Redis;
-import io.vertx.redis.client.RedisConnection;
 import io.vertx.redis.client.Request;
 
-import java.util.Collections;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertSame;
 
 class PreservesContext {
-  static void sendWithoutConnect(Redis client, TestContext test) {
-    Async async = test.async();
+  static void sendWithoutConnect(Redis client, VertxTestContext test) {
+    Checkpoint checkpoint = test.checkpoint();
 
     Context context = ContextInternal.current().duplicate();
     context.runOnContext(ignored -> {
-      client.send(Request.cmd(Command.PING)).onComplete(result -> {
-        test.assertTrue(result.succeeded());
-        test.assertTrue(context == Vertx.currentContext());
-        async.complete();
-      });
+      client.send(Request.cmd(Command.PING)).onComplete(test.succeeding(result -> {
+        assertSame(context, Vertx.currentContext());
+        checkpoint.flag();
+      }));
     });
   }
 
-  static void batchWithoutConnect(Redis client, TestContext test) {
-    Async async = test.async();
+  static void batchWithoutConnect(Redis client, VertxTestContext test) {
+    Checkpoint checkpoint = test.checkpoint();
 
     Context context = ContextInternal.current().duplicate();
     context.runOnContext(ignored -> {
-      client.batch(Collections.singletonList(Request.cmd(Command.PING))).onComplete(result -> {
-        test.assertTrue(result.succeeded());
-        test.assertTrue(context == Vertx.currentContext());
-        async.complete();
-      });
+      client.batch(List.of(Request.cmd(Command.PING))).onComplete(test.succeeding(result -> {
+        assertSame(context, Vertx.currentContext());
+        checkpoint.flag();
+      }));
     });
   }
 
-  static void connect(Redis client, TestContext test) {
-    Async async = test.async();
+  static void connect(Redis client, VertxTestContext test) {
+    Checkpoint checkpoint = test.checkpoint();
 
     Context context = ContextInternal.current().duplicate();
     context.runOnContext(ignored -> {
-      client.connect().onComplete(connectResult -> {
-        test.assertTrue(connectResult.succeeded());
-        test.assertTrue(context == Vertx.currentContext());
-        async.complete();
-      });
+      client.connect().onComplete(test.succeeding(conn -> {
+        assertSame(context, Vertx.currentContext());
+        conn.close().onComplete(test.succeeding(ignored2 -> {
+          checkpoint.flag();
+        }));
+      }));
     });
   }
 
-  static void connectThenSend(Redis client, TestContext test) {
-    Async async = test.async();
+  static void connectThenSend(Redis client, VertxTestContext test) {
+    Checkpoint checkpoint = test.checkpoint();
 
     Context context = ContextInternal.current().duplicate();
     context.runOnContext(ignored -> {
-      client.connect().onComplete(connectResult -> {
-        test.assertTrue(connectResult.succeeded());
-
-        RedisConnection connection = connectResult.result();
-        connection.send(Request.cmd(Command.PING)).onComplete(result -> {
-          test.assertTrue(result.succeeded());
-          test.assertTrue(context == Vertx.currentContext());
-          async.complete();
-        });
-      });
+      client.connect().onComplete(test.succeeding(conn -> {
+        conn.send(Request.cmd(Command.PING)).onComplete(test.succeeding(result -> {
+          assertSame(context, Vertx.currentContext());
+          conn.close().onComplete(test.succeeding(ignored2 -> {
+            checkpoint.flag();
+          }));
+        }));
+      }));
     });
   }
 
-  static void connectThenBatch(Redis client, TestContext test) {
-    Async async = test.async();
+  static void connectThenBatch(Redis client, VertxTestContext test) {
+    Checkpoint checkpoint = test.checkpoint();
 
     Context context = ContextInternal.current().duplicate();
     context.runOnContext(ignored -> {
-      client.connect().onComplete(connectResult -> {
-        test.assertTrue(connectResult.succeeded());
-
-        RedisConnection connection = connectResult.result();
-        connection.batch(Collections.singletonList(Request.cmd(Command.PING))).onComplete(result -> {
-          test.assertTrue(result.succeeded());
-          test.assertTrue(context == Vertx.currentContext());
-          async.complete();
-        });
-      });
+      client.connect().onComplete(test.succeeding(conn -> {
+        conn.batch(List.of(Request.cmd(Command.PING))).onComplete(test.succeeding(result -> {
+          assertSame(context, Vertx.currentContext());
+          conn.close().onComplete(test.succeeding(ignored2 -> {
+            checkpoint.flag();
+          }));
+        }));
+      }));
     });
   }
 }
